# Visor

./: pyproject.toml
backend/: .gitignore  JOB_QUEUE_API.md  README.md  evaluate.py  modal_config.json  pyproject.toml  server.py  visor_multi_ocr.py  vllm_server.py
backend/archives/: server.py
backend/ocrs/: dotsocr.py  lightonocr.py
frontend/: openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/api-client/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: document-preview.tsx  results-panel.tsx  settings-panel.tsx
frontend/contexts/: app-context.tsx
frontend/lib/: api.ts  constants.ts
